fix(refs 754383): hide visibility options if 1 option only
If there is only one role group which should be able to
view faq articles, it makes no sense to force editors
to always chose this option - this one group is activated
silently, and users may control visibility by using the
"Status" toggle.

The permissions used to control which options are shown,
are not sufficient, so a new configuration parameter is
established.

--- a/demosplan/DemosPlanCoreBundle/Resources/config/parameters_default.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/parameters_default.yml
@@ -99,9 +99,14 @@ parameters:
         - 'Gesamtstellungnahme'
         - 'Fehlanzeige'
 
-    #List of Role codes that are allowed in current project
+    # List of role codes that are allowed in current project
     roles_allowed:
         - !php/const demosplan\DemosPlanCoreBundle\Entity\User\Role::GUEST
+
+    # List of role group codes that faq articles may be visible for. There must be
+    # at least one role activated via 'roles_allowed' for each role group set here.
+    role_groups_faq_visibility:
+        - !php/const demosplan\DemosPlanCoreBundle\Entity\User\Role::GGUEST
 
     # Alternatives Login
     # #refactor: This should be renamed e.g. in local login, form login or the like
