F 30254 adjust service yml (#1135)
* feature (refs T30254): Tag
EntityFetcherInterface with class
implementation and EntityManager as service.

* feature (refs T30254): update composer.lock due
to changes in demosplan addon.

--- a/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
@@ -453,6 +453,13 @@ services:
             $schemaPathProcessor: '@EDT\Wrapping\Utilities\SchemaPathProcessor'
             $entityManager: '@doctrine.orm.entity_manager'
 
+    Doctrine\ORM\EntityManager:
+        arguments:
+            $config: '@doctrine.orm.default_configuration'
+
+    EDT\JsonApi\RequestHandling\EntityFetcherInterface:
+        class: demosplan\DemosPlanCoreBundle\Logic\ApiRequest\EntityFetcher
+
     demosplan\DemosPlanCoreBundle\Logic\Logger\ApiLogger: ~
 
     # Used in Migrations. As long as DI is not usable in Migrations yet these have to be public
