feature (refs T30254): update services.yml tag FileUploadServiceInterface as a FileUploadService

--- a/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
@@ -47,7 +47,7 @@ services:
         class:
 
     DemosEurope\DemosplanAddon\Contracts\FileUploadServiceInterface:
-        class:
+        class: 'demosplan\DemosPlanCoreBundle\Logic\FileUploadService'
 
     DemosEurope\DemosplanAddon\Contracts\StatementHandlerInterface:
         class:
