--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "@uppy/core": "^3.1.1",
     "@uppy/drag-drop": "^3.0.1",
     "@uppy/progress-bar": "^3.0.0",
+    "@vue/compat": "3.1.5",
+    "@vue/compiler-sfc": "3.1.5",
     "a11y-datepicker": " ^0.9.0",
     "core-js": "^3.29.1",
     "d3": "^7.8.4",
@@ -93,7 +95,7 @@
     "tippy.js": "^6.3.7",
     "tooltip.js": "^1.3.3",
     "uuid": "^9.0.0",
-    "vue": "~2.7.10",
+    "vue": "3.1.5",
     "vue-multiselect": "^2.1.7",
     "vue-scrollto": "^2.20.0",
     "vue-sliding-pagination": "^1.3.2",
@@ -170,7 +172,7 @@
     "stylelint-config-standard-scss": "^6.1.0",
     "terser-webpack-plugin": "^5.3.7",
     "util": "^0.12.4",
-    "vue-loader": "^15.10.1",
+    "vue-loader": "^16.8.3",
     "vue-style-loader": "~4.1.3",
     "webpack": "^5.77.0",
     "webpack-bundle-analyzer": "^4.8.0",
