--- a/demosplan/DemosPlanCoreBundle/Resources/config/parameters_default.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/parameters_default.yml
@@ -325,6 +325,15 @@ parameters:
     saml_sp_x509_string: ''
     saml_registration_url: ''
 
+    # knpu_oauth2_client settings
+    type: ''
+    client_id: ''
+    client_secret: ''
+    redirect_route: ''
+    redirect_params: {}
+    auth_server_url: ''
+    realm: ''
+
     # Set users with permissions to alter Database
     database_install_user: ""
     database_install_password: ""
