feature (refs T30254): tag the EmailAddressRepositoryInterface in the services.yml and remove an unused EventSubscriber

--- a/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
@@ -1271,6 +1271,9 @@ services:
         tags:
             - { name: doctrine.orm.entity_listener, event: postLoad, entity: demosplan\DemosPlanCoreBundle\Entity\User\User, lazy: true }
 
+    DemosEurope\DemosplanAddon\Contracts\Repositories\EmailAddressRepositoryInterface:
+        class: 'demosplan\DemosPlanCoreBundle\Repository\EmailAddressRepository'
+
     EDT\Wrapping\TypeProviders\PrefilledTypeProvider:
         alias: 'demosplan\DemosPlanCoreBundle\Logic\ApiRequest\PrefilledResourceTypeProvider'
 
