--- a/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
@@ -68,7 +68,7 @@ services:
         class: demosplan\DemosPlanCoreBundle\Logic\ExternalFileSaver
 
     DemosEurope\DemosplanAddon\Contracts\StatementCreatorInterface:
-        class: demosplan\DemosPlanStatementBundle\Logic\SimplifiedStatement\ManualSimplifiedStatementCreator
+        class: demosplan\DemosPlanCoreBundle\Logic\Statement\SimplifiedStatement\ManualSimplifiedStatementCreator
 
     DemosEurope\DemosplanAddon\Contracts\FileServiceInterface:
         class: demosplan\DemosPlanCoreBundle\Logic\FileService
@@ -108,7 +108,7 @@ services:
 #        class:
 
     DemosEurope\DemosplanAddon\Contracts\Handler\StatementHandlerInterface:
-        class: demosplan\DemosPlanStatementBundle\Logic\StatementHandler
+        class: demosplan\DemosPlanCoreBundle\Logic\Statement\StatementHandler
 
     DemosEurope\DemosplanAddon\Contracts\Handler\SingleDocumentHandlerInterface:
         class: demosplan\DemosPlanCoreBundle\Logic\Document\SingleDocumentHandler
@@ -190,7 +190,7 @@ services:
         class: demosplan\DemosPlanCoreBundle\Event\IsFileAvailableEvent
 
     DemosEurope\DemosplanAddon\Contracts\Services\StatementServiceInterface:
-        class: demosplan\DemosPlanStatementBundle\Logic\StatementService
+        class: demosplan\DemosPlanCoreBundle\Logic\Statement\StatementService
 
     DemosEurope\DemosplanAddon\Contracts\Services\UserServiceInterface:
         class: 'demosplan\DemosPlanUserBundle\Logic\UserService'
@@ -895,71 +895,71 @@ services:
 
     demosplan\DemosPlanReportBundle\Logic\ReportMessageConverter: ~
 
-    demosplan\DemosPlanStatementBundle\Logic\DraftStatementHandler:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\DraftStatementHandler:
         lazy: true
         parent: demosplan\DemosPlanCoreBundle\Logic\CoreHandler
 
-    demosplan\DemosPlanStatementBundle\Logic\ElasticSearchService:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\ElasticSearchService:
         parent: demosplan\DemosPlanCoreBundle\Logic\CoreService
         lazy: true
 
-    demosplan\DemosPlanStatementBundle\Logic\StatementHandler:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\StatementHandler:
         parent: demosplan\DemosPlanCoreBundle\Logic\CoreHandler
         lazy: true
         calls:
             - [ 'setTagImportService', [ '@intriro_csv.importer.tags' ] ]
             - [ 'setElasticsearchIndexManager', ['@fos_elastica.index_manager'] ]
 
-    demosplan\DemosPlanStatementBundle\Logic\StatementFilterHandler:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\StatementFilterHandler:
         lazy: true
         parent: demosplan\DemosPlanCoreBundle\Logic\CoreHandler
 
-    demosplan\DemosPlanStatementBundle\Logic\DraftStatementService:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\DraftStatementService:
         parent: demosplan\DemosPlanCoreBundle\Logic\CoreService
         lazy: true
         calls:
             - [ 'setEsDraftStatementIndex', [ '@fos_elastica.index.draftStatements' ]]
 
-    demosplan\DemosPlanStatementBundle\Logic\AssignService:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\AssignService:
         lazy: true
 
-    demosplan\DemosPlanStatementBundle\Repository\FragmentElasticsearchRepository:
+    demosplan\DemosPlanCoreBundle\Repository\FragmentElasticsearchRepository:
         $fragmentSearchType: '@fos_elastica.index.statementFragments'
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\Statement\StatementFragment'
 
-    demosplan\DemosPlanStatementBundle\Logic\StatementService:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\StatementService:
         parent: demosplan\DemosPlanCoreBundle\Logic\CoreService
         lazy: true
         calls:
             - [ 'setEsStatementType', [ '@fos_elastica.index.statements' ]]
 
-    demosplan\DemosPlanStatementBundle\Logic\StatementCopyAndMoveService:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\StatementCopyAndMoveService:
         lazy: true
 
-    demosplan\DemosPlanStatementBundle\Logic\StatementMover:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\StatementMover:
         lazy: true
 
-    demosplan\DemosPlanStatementBundle\Logic\StatementCopier:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\StatementCopier:
         lazy: true
 
-    demosplan\DemosPlanStatementBundle\Logic\StatementClusterService:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\StatementClusterService:
         lazy: true
 
-    demosplan\DemosPlanStatementBundle\Logic\StatementFragmentService:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\StatementFragmentService:
         lazy: true
         calls:
             - [ 'setEsStatementFragmentType', [ '@fos_elastica.index.statementFragments' ]]
         parent: demosplan\DemosPlanCoreBundle\Logic\CoreService
 
 
-    demosplan\DemosPlanStatementBundle\Logic\TagService:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\TagService:
         lazy: true
 
-    demosplan\DemosPlanStatementBundle\Logic\SubmitterService:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\SubmitterService:
         lazy: true
         parent: demosplan\DemosPlanCoreBundle\Logic\CoreService
 
-    demosplan\DemosPlanStatementBundle\EventListener\UpdateElasticaStatementPostListener:
+    demosplan\DemosPlanCoreBundle\EventListener\UpdateElasticaStatementPostListener:
         lazy: true
         tags:
             - { name: doctrine.event_listener, event: preRemove }
@@ -967,22 +967,22 @@ services:
             - { name: doctrine.event_listener, event: postPersist }
 
 
-    demosplan\DemosPlanStatementBundle\EventListener\DoctrineStatementListener:
+    demosplan\DemosPlanCoreBundle\EventListener\DoctrineStatementListener:
         lazy: true
         tags:
             - { name: doctrine.orm.entity_listener, event: postLoad, entity: demosplan\DemosPlanCoreBundle\Entity\Statement\Statement, lazy: true }
 
 
-    demosplan\DemosPlanStatementBundle\EventListener\IndexFilesListener:
+    demosplan\DemosPlanCoreBundle\EventListener\IndexFilesListener:
         tags:
             - { name: kernel.event_subscriber }
 
-    demosplan\DemosPlanStatementBundle\Logic\AssessmentExportOptions:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\AssessmentExportOptions:
         lazy: true
         arguments:
             $env: '%kernel.environment%'
 
-    demosplan\DemosPlanStatementBundle\Logic\AssessmentHandler:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\AssessmentHandler:
         parent: demosplan\DemosPlanCoreBundle\Logic\CoreHandler
         lazy: true
 
@@ -1004,55 +1004,55 @@ services:
         tags:
             - name: dplan.json_api_transformer
 
-    demosplan\DemosPlanStatementBundle\Validator\StatementIdsInProcedureValidator:
+    demosplan\DemosPlanCoreBundle\Validator\StatementIdsInProcedureValidator:
         tags:
-            - { name: validator.constraint_validator, alias: demosplan\DemosPlanStatementBundle\Validator\StatementIdsInProcedureValidator }
+            - { name: validator.constraint_validator, alias: demosplan\DemosPlanCoreBundle\Validator\StatementIdsInProcedureValidator }
 
-    demosplan\DemosPlanStatementBundle\Validator\ClaimedStatementIdsValidator:
+    demosplan\DemosPlanCoreBundle\Validator\ClaimedStatementIdsValidator:
         tags:
-            - { name: validator.constraint_validator, alias: demosplan\DemosPlanStatementBundle\Validator\ClaimedStatementIdsValidator }
+            - { name: validator.constraint_validator, alias: demosplan\DemosPlanCoreBundle\Validator\ClaimedStatementIdsValidator }
 
-    demosplan\DemosPlanStatementBundle\Logic\CountyService:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\CountyService:
         lazy: true
         parent: demosplan\DemosPlanCoreBundle\Logic\CoreService
 
-    demosplan\DemosPlanStatementBundle\Logic\PriorityAreaService:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\PriorityAreaService:
         lazy: true
         parent: demosplan\DemosPlanCoreBundle\Logic\CoreService
 
-    demosplan\DemosPlanStatementBundle\Logic\MunicipalityService:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\MunicipalityService:
         lazy: true
         parent: demosplan\DemosPlanCoreBundle\Logic\CoreService
 
-    demosplan\DemosPlanStatementBundle\Logic\GdprConsentRevokeTokenService:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\GdprConsentRevokeTokenService:
         lazy: true
         parent: demosplan\DemosPlanCoreBundle\Logic\CoreService
 
-    demosplan\DemosPlanStatementBundle\Logic\PresentableOriginalStatementFactory:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\PresentableOriginalStatementFactory:
         lazy: true
 
     # Assessment Table Exporter Strategy
-    demosplan\DemosPlanStatementBundle\Logic\AssessmentTableExporter\AssessmentTableExporterStrategy:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\AssessmentTableExporter\AssessmentTableExporterStrategy:
         lazy: true
         arguments: [!tagged dplan.assessment.table.exporter]
 
     # Assessment Table Exporter Abstract
-    demosplan\DemosPlanStatementBundle\Logic\AssessmentTableExporter\AssessmentTableFileExporterAbstract: ~
+    demosplan\DemosPlanCoreBundle\Logic\Statement\AssessmentTableExporter\AssessmentTableFileExporterAbstract: ~
 
     # PDF Exporter
-    demosplan\DemosPlanStatementBundle\Logic\AssessmentTableExporter\AssessmentTablePdfExporter:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\AssessmentTableExporter\AssessmentTablePdfExporter:
         lazy: true
         tags:
             - { name: "dplan.assessment.table.exporter" }
 
     # XLS Exporter
-    demosplan\DemosPlanStatementBundle\Logic\AssessmentTableExporter\AssessmentTableXlsExporter:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\AssessmentTableExporter\AssessmentTableXlsExporter:
         lazy: true
         tags:
             - { name: "dplan.assessment.table.exporter" }
 
     # DOCX Exporter
-    demosplan\DemosPlanStatementBundle\Logic\AssessmentTableExporter\AssessmentTableDocxExporter:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\AssessmentTableExporter\AssessmentTableDocxExporter:
         lazy: true
         tags:
             - { name: "dplan.assessment.table.exporter" }
@@ -1085,9 +1085,9 @@ services:
         tags:
             - { name: "dplan.file.response.generator" }
 
-    demosplan\DemosPlanStatementBundle\Logic\SimplifiedStatement\SimplifiedStatementCreator: ~
+    demosplan\DemosPlanCoreBundle\Logic\Statement\SimplifiedStatement\SimplifiedStatementCreator: ~
 
-    demosplan\DemosPlanStatementBundle\Logic\SimplifiedStatement\ManualSimplifiedStatementCreator:
+    demosplan\DemosPlanCoreBundle\Logic\Statement\SimplifiedStatement\ManualSimplifiedStatementCreator:
         lazy: true
 
     # Drafts Info Service
@@ -1252,7 +1252,7 @@ services:
         parent: demosplan\DemosPlanCoreBundle\Logic\CoreService
         lazy: true
 
-    demosplan\DemosPlanStatementBundle\EventSubscriber\OrganisationUpdateSubscriber:
+    demosplan\DemosPlanCoreBundle\EventSubscriber\OrganisationUpdateSubscriber:
         tags:
             - { name: kernel.event_subscriber }
 
