--- a/demosplan/DemosPlanCoreBundle/Resources/config/services_repositories.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services_repositories.yml
@@ -104,46 +104,46 @@ services:
     demosplan\DemosPlanCoreBundle\Repository\GisLayerCategoryRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\Map\GisLayerCategory'
 
-    demosplan\DemosPlanStatementBundle\Repository\GdprConsentRepository:
+    demosplan\DemosPlanCoreBundle\Repository\GdprConsentRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\Statement\GdprConsent'
 
-    demosplan\DemosPlanStatementBundle\Repository\GdprConsentRevokeTokenRepository:
+    demosplan\DemosPlanCoreBundle\Repository\GdprConsentRevokeTokenRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\Statement\GdprConsentRevokeToken'
 
-    demosplan\DemosPlanStatementBundle\Repository\CountyRepository:
+    demosplan\DemosPlanCoreBundle\Repository\CountyRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\Statement\County'
 
-    demosplan\DemosPlanStatementBundle\Repository\TagTopicRepository:
+    demosplan\DemosPlanCoreBundle\Repository\TagTopicRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\Statement\TagTopic'
 
-    demosplan\DemosPlanStatementBundle\Repository\StatementFragmentVersionRepository:
+    demosplan\DemosPlanCoreBundle\Repository\StatementFragmentVersionRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\Statement\StatementFragmentVersion'
 
-    demosplan\DemosPlanStatementBundle\Repository\StatementAttributeRepository:
+    demosplan\DemosPlanCoreBundle\Repository\StatementAttributeRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\Statement\StatementAttribute'
 
-    demosplan\DemosPlanStatementBundle\Repository\TagRepository:
+    demosplan\DemosPlanCoreBundle\Repository\TagRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\Statement\Tag'
 
-    demosplan\DemosPlanStatementBundle\Repository\DraftStatementVersionRepository:
+    demosplan\DemosPlanCoreBundle\Repository\DraftStatementVersionRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\Statement\DraftStatementVersion'
 
-    demosplan\DemosPlanStatementBundle\Repository\StatementVoteRepository:
+    demosplan\DemosPlanCoreBundle\Repository\StatementVoteRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\Statement\StatementVote'
 
-    demosplan\DemosPlanStatementBundle\Repository\StatementRepository:
+    demosplan\DemosPlanCoreBundle\Repository\StatementRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\Statement\Statement'
 
-    demosplan\DemosPlanStatementBundle\Repository\PriorityAreaRepository:
+    demosplan\DemosPlanCoreBundle\Repository\PriorityAreaRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\Statement\PriorityArea'
 
-    demosplan\DemosPlanStatementBundle\Repository\DraftStatementRepository:
+    demosplan\DemosPlanCoreBundle\Repository\DraftStatementRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\Statement\DraftStatement'
 
-    demosplan\DemosPlanStatementBundle\Repository\StatementFragmentRepository:
+    demosplan\DemosPlanCoreBundle\Repository\StatementFragmentRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\Statement\StatementFragment'
 
-    demosplan\DemosPlanStatementBundle\Repository\MunicipalityRepository:
+    demosplan\DemosPlanCoreBundle\Repository\MunicipalityRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\Statement\Municipality'
 
     demosplan\DemosPlanReportBundle\Repository\ReportRepository:
