--- a/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
@@ -1136,42 +1136,42 @@ services:
             -   name: dplan.json_api_transformer
 
     # Survey Handler
-    demosplan\DemosPlanSurveyBundle\Logic\SurveyHandler:
+    demosplan\DemosPlanCoreBundle\Logic\Survey\SurveyHandler:
         $surveyStatuses: '%survey.statuses%'
 
     # Survey New Handler
-    demosplan\DemosPlanSurveyBundle\Logic\SurveyNewHandler:
+    demosplan\DemosPlanCoreBundle\Logic\Survey\SurveyNewHandler:
         $defaultStatus: '%survey.status.default%'
 
     # Survey Update Handler
-    demosplan\DemosPlanSurveyBundle\Logic\SurveyUpdateHandler:
+    demosplan\DemosPlanCoreBundle\Logic\Survey\SurveyUpdateHandler:
         $schemaFilePath: '%survey.schema_path_update%'
 
     # Survey Create Handler
-    demosplan\DemosPlanSurveyBundle\Logic\SurveyCreateHandler:
+    demosplan\DemosPlanCoreBundle\Logic\Survey\SurveyCreateHandler:
         $schemaFilePath: '%survey.schema_path_create%'
 
     # Survey Show Handler
-    demosplan\DemosPlanSurveyBundle\Logic\SurveyShowHandler: ~
+    demosplan\DemosPlanCoreBundle\Logic\Survey\SurveyShowHandler: ~
 
     # Survey Service
-    demosplan\DemosPlanSurveyBundle\Logic\SurveyService: ~
+    demosplan\DemosPlanCoreBundle\Logic\Survey\SurveyService: ~
 
     # Survey Validator
-    demosplan\DemosPlanSurveyBundle\Validator\SurveyValidator: ~
+    demosplan\DemosPlanCoreBundle\Validator\SurveyValidator: ~
 
     # SurveyVote Handler
-    demosplan\DemosPlanSurveyBundle\Logic\SurveyVoteHandler:
+    demosplan\DemosPlanCoreBundle\Logic\Survey\SurveyVoteHandler:
         $permissions: '@demosplan\DemosPlanCoreBundle\Permissions\PermissionsInterface'
 
     # SurveyVote Create Handler
-    demosplan\DemosPlanSurveyBundle\Logic\SurveyVoteCreateHandler: ~
+    demosplan\DemosPlanCoreBundle\Logic\Survey\SurveyVoteCreateHandler: ~
 
     # SurveyVote Service
-    demosplan\DemosPlanSurveyBundle\Logic\SurveyVoteService: ~
+    demosplan\DemosPlanCoreBundle\Logic\Survey\SurveyVoteService: ~
 
     # SurveyVote Validator
-    demosplan\DemosPlanSurveyBundle\Validator\SurveyVoteValidator:
+    demosplan\DemosPlanCoreBundle\Validator\SurveyVoteValidator:
         $schemaFilePath: '%surveyvote.schema_path_create%'
 
     demosplan\DemosPlanUserBundle\Logic\UserService:
