F_T32247 adjust ReportRepository path in the services_repositories yaml

--- a/demosplan/DemosPlanCoreBundle/Resources/config/services_repositories.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services_repositories.yml
@@ -146,7 +146,7 @@ services:
     demosplan\DemosPlanStatementBundle\Repository\MunicipalityRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\Statement\Municipality'
 
-    demosplan\DemosPlanReportBundle\Repository\ReportRepository:
+    demosplan\DemosPlanCoreBundle\Repository\ReportRepository:
         $entityClass: 'demosplan\DemosPlanCoreBundle\Entity\Report\ReportEntry'
 
     demosplan\DemosPlanUserBundle\Repository\AddressBookEntryRepository:
