--- a/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
@@ -395,9 +395,11 @@ services:
         lazy: true
         parent: demosplan\DemosPlanCoreBundle\Logic\CoreService
 
+    OldSound\RabbitMqBundle\RabbitMq\RpcClient: '@old_sound_rabbit_mq.demos_plan_import_rpc'
+
     demosplan\DemosPlanCoreBundle\Logic\FileService:
-        calls:
-            - [ 'setClient', [ '@old_sound_rabbit_mq.demos_plan_import_rpc' ]]
+        arguments:
+            $rpcClient: '@old_sound_rabbit_mq.demos_plan_import_rpc'
         lazy: true
         parent: demosplan\DemosPlanCoreBundle\Logic\CoreService
 
