--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "lint:scss": "stylelint {demosplan/DemosPlanCoreBundle/Resources/client/scss,projects}/**/*.scss"
   },
   "dependencies": {
-    "@demos-europe/demosplan-ui": "^0",
+    "@demos-europe/demosplan-ui": "github:demos-europe/demosplan-ui#f77f3dadafc2264504aea6526cc6e9bcea07c423",
     "@demos-europe/dp-consent": "^1.1.2",
     "@efrane/vuex-json-api": "0.0.38",
     "@masterportal/masterportalapi": "^2.16.0",
@@ -51,6 +51,8 @@
     "@uppy/core": "^3.1.1",
     "@uppy/drag-drop": "^3.0.1",
     "@uppy/progress-bar": "^3.0.0",
+    "@vue/compat": "^3.2.47",
+    "@vue/compiler-sfc": "^3.2.47",
     "a11y-datepicker": " ^0.9.0",
     "core-js": "^3.30.1",
     "d3": "^7.8.4",
@@ -93,11 +95,10 @@
     "tippy.js": "^6.3.7",
     "tooltip.js": "^1.3.3",
     "uuid": "^9.0.0",
-    "vue": "~2.7.10",
+    "vue": "^3.1.0",
     "vue-multiselect": "^2.1.7",
     "vue-scrollto": "^2.20.0",
     "vue-sliding-pagination": "^1.3.2",
-    "vue-template-compiler": "^2.7.10",
     "vue2-leaflet": "^2.7.1",
     "vue2-leaflet-markercluster": "^3.1.0",
     "vuedraggable": "^2.24.3",
@@ -170,7 +171,7 @@
     "stylelint-config-standard-scss": "^6.1.0",
     "terser-webpack-plugin": "^5.3.7",
     "util": "^0.12.4",
-    "vue-loader": "^15.10.1",
+    "vue-loader": "^16.0.0",
     "vue-style-loader": "~4.1.3",
     "webpack": "^5.79.0",
     "webpack-bundle-analyzer": "^4.8.0",
