--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lint:scss": "stylelint {demosplan/DemosPlanCoreBundle/Resources/client/scss,projects}/**/*.scss"
   },
   "dependencies": {
+    "@braintree/sanitize-url": "^6.0.2",
     "@demos-europe/demosplan-ui": "^0",
     "@demos-europe/dp-consent": "^1.1.2",
     "@efrane/vuex-json-api": "0.0.38",
