feature (refs T32246): Remove DemosPlanUserBundle from bundles.php and services_autowire.yml, adjust services.yml and delete DemosPlanUserBundle.php.

--- a/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
+++ b/demosplan/DemosPlanCoreBundle/Resources/config/services.yml
@@ -1213,7 +1213,7 @@ services:
         lazy: true
         parent: demosplan\DemosPlanCoreBundle\Logic\CoreHandler
 
-    demosplan\DemosPlanUserBundle\EventListener\DoctrineUserListener:
+    demosplan\DemosPlanCoreBundle\EventListener\DoctrineUserListener:
         lazy: true
         tags:
             - { name: doctrine.orm.entity_listener, event: postLoad, entity: demosplan\DemosPlanCoreBundle\Entity\User\User, lazy: true }
